@@ -1,6 +1,7 @@
 package com.toyota.salesservice.service.concretes;
 
 import com.toyota.salesservice.dao.CampaignRepository;
+import com.toyota.salesservice.dao.CampaignSpecification;
 import com.toyota.salesservice.domain.Campaign;
 import com.toyota.salesservice.domain.CampaignType;
 import com.toyota.salesservice.dto.requests.CreateCampaignRequest;
@@ -16,12 +17,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.*;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -45,39 +44,37 @@ public class CampaignManagerTest {
     }
 
     @Test
-    void getAllCampaigns_shouldReturnAllCampaigns() {
-        List<Campaign> campaigns = List.of(new Campaign(), new Campaign());
-        when(campaignRepository.findAll()).thenReturn(campaigns);
-        when(modelMapper.map(any(Campaign.class), eq(GetAllCampaignsResponse.class))).thenReturn(new GetAllCampaignsResponse());
+    void getCampaignsFiltered_asc() {
+        // Given
+        int page = 0;
+        int size = 3;
+        String[] sort = {"id,asc"};
+
+        Campaign campaign1 = new Campaign(1L, "1234567890123", "Campaign1", CampaignType.BUYPAY, "3,2", 1, true, "Asaf", LocalDateTime.now(), null, false);
+        Campaign campaign2 = new Campaign(2L, "1234567890124", "Campaign2", CampaignType.BUYPAY, "7,6", 1, true, "Asaf", LocalDateTime.now(), null, false);
+        List<Campaign> campaignList = Arrays.asList(campaign1, campaign2);
+
+        Page<Campaign> campaignPage = new PageImpl<>(campaignList, PageRequest.of(page, size, Sort.by(Sort.Order.asc("id"))), campaignList.size());
+
+        // When
+        when(campaignRepository.findAll(any(CampaignSpecification.class), any(Pageable.class))).thenReturn(campaignPage);
+        when(modelMapper.map(any(Campaign.class), eq(GetAllCampaignsResponse.class)))
+                .thenAnswer(invocation -> {
+                    Campaign campaign = invocation.getArgument(0);
+                    return new GetAllCampaignsResponse(campaign.getId(), campaign.getCampaignNumber(), campaign.getName(), campaign.getCampaignCategory(), campaign.getCampaignKey(), campaign.getCampaignType(), campaign.getState(), campaign.getCreatedBy(), LocalDateTime.now());
+                });
         when(modelMapperService.forResponse()).thenReturn(modelMapper);
 
-        List<GetAllCampaignsResponse> responses = campaignManager.getAllCampaigns();
+        Map<String, Object> response = campaignManager.getCampaignsFiltered(page, size, sort, null, null, null, null, null, null, null);
 
-        assertEquals(2, responses.size());
-        verify(campaignRepository, times(1)).findAll();
-    }
+        // Then
+        @SuppressWarnings("unchecked")
+        List<GetAllCampaignsResponse> campaignsResponseList = (List<GetAllCampaignsResponse>) response.get("campaigns");
 
-    @Test
-    void getCampaignByCampaignNumber_shouldReturnCampaign() {
-        String campaignNumber = "12345678";
-        Campaign campaign = new Campaign();
-        campaign.setCampaignNumber(campaignNumber);
-        when(campaignRepository.findByCampaignNumber(campaignNumber)).thenReturn(Optional.of(campaign));
-        when(modelMapper.map(any(Campaign.class), eq(GetAllCampaignsResponse.class))).thenReturn(new GetAllCampaignsResponse());
-        when(modelMapperService.forResponse()).thenReturn(modelMapper);
-
-        GetAllCampaignsResponse response = campaignManager.getCampaignByCampaignNumber(campaignNumber);
-
-        assertNotNull(response);
-        verify(campaignRepository, times(1)).findByCampaignNumber(campaignNumber);
-    }
-
-    @Test
-    void getCampaignByCampaignNumber_shouldThrowCampaignNotFoundException() {
-        String campaignNumber = "12345678";
-        when(campaignRepository.findByCampaignNumber(campaignNumber)).thenReturn(Optional.empty());
-
-        assertThrows(CampaignNotFoundException.class, () -> campaignManager.getCampaignByCampaignNumber(campaignNumber));
+        assertEquals(2, campaignsResponseList.size());
+        assertEquals(0, response.get("currentPage"));
+        assertEquals(2L, response.get("totalItems"));
+        assertEquals(1, response.get("totalPages"));
     }
 
     @Test
@@ -102,7 +99,7 @@ public class CampaignManagerTest {
         response.setName(campaign.getName());
         response.setCampaignCategory(campaign.getCampaignCategory());
 
-        when(campaignRepository.existsByNameIgnoreCase(request.getName())).thenReturn(false);
+        when(campaignRepository.existsByNameIgnoreCaseAndDeletedIsFalse(request.getName())).thenReturn(false);
         when(campaignRepository.save(any(Campaign.class))).thenReturn(campaign);
         when(modelMapperService.forResponse()).thenReturn(modelMapper);
         when(modelMapper.map(any(Campaign.class), eq(GetAllCampaignsResponse.class))).thenReturn(response);
@@ -113,7 +110,7 @@ public class CampaignManagerTest {
         assertEquals(request.getName(), actualResponse.getName());
         assertEquals(request.getCampaignCategory(), actualResponse.getCampaignCategory());
 
-        verify(campaignRepository, times(1)).existsByNameIgnoreCase(request.getName());
+        verify(campaignRepository, times(1)).existsByNameIgnoreCaseAndDeletedIsFalse(request.getName());
         verify(campaignRepository, times(1)).save(any(Campaign.class));
         verify(modelMapperService, times(1)).forResponse();
         verify(modelMapper, times(1)).map(any(Campaign.class), eq(GetAllCampaignsResponse.class));
@@ -124,13 +121,13 @@ public class CampaignManagerTest {
         CreateCampaignRequest request = new CreateCampaignRequest();
         request.setName("Existing Campaign");
 
-        when(campaignRepository.existsByNameIgnoreCase(request.getName())).thenReturn(true);
+        when(campaignRepository.existsByNameIgnoreCaseAndDeletedIsFalse(request.getName())).thenReturn(true);
 
         CampaignAlreadyExistsException exception = assertThrows(CampaignAlreadyExistsException.class, () -> campaignManager.addCampaign(request));
 
         assertEquals("Campaign already exists", exception.getMessage());
 
-        verify(campaignRepository, times(1)).existsByNameIgnoreCase(request.getName());
+        verify(campaignRepository, times(1)).existsByNameIgnoreCaseAndDeletedIsFalse(request.getName());
         verify(campaignRepository, never()).save(any(Campaign.class));
     }
 
@@ -168,7 +165,7 @@ public class CampaignManagerTest {
         response.setName(updatedCampaign.getName());
         response.setCampaignCategory(updatedCampaign.getCampaignCategory());
 
-        when(campaignRepository.findById(request.getId())).thenReturn(Optional.of(existingCampaign));
+        when(campaignRepository.findByIdAndDeletedFalse(request.getId())).thenReturn(Optional.of(existingCampaign));
         when(campaignRepository.save(any(Campaign.class))).thenReturn(updatedCampaign);
         when(modelMapperService.forResponse()).thenReturn(modelMapper);
         when(modelMapper.map(any(Campaign.class), eq(GetAllCampaignsResponse.class))).thenReturn(response);
@@ -179,7 +176,7 @@ public class CampaignManagerTest {
         assertEquals(request.getName(), actualResponse.getName());
         assertEquals(request.getCampaignCategory(), actualResponse.getCampaignCategory());
 
-        verify(campaignRepository, times(1)).findById(request.getId());
+        verify(campaignRepository, times(1)).findByIdAndDeletedFalse(request.getId());
         verify(campaignRepository, times(1)).save(any(Campaign.class));
         verify(modelMapperService, times(1)).forResponse();
         verify(modelMapper, times(1)).map(any(Campaign.class), eq(GetAllCampaignsResponse.class));
@@ -190,13 +187,13 @@ public class CampaignManagerTest {
         UpdateCampaignRequest request = new UpdateCampaignRequest();
         request.setId(1L);
 
-        when(campaignRepository.findById(request.getId())).thenReturn(Optional.empty());
+        when(campaignRepository.findByIdAndDeletedFalse(request.getId())).thenReturn(Optional.empty());
 
         CampaignNotFoundException exception = assertThrows(CampaignNotFoundException.class, () -> campaignManager.updateCampaign(request));
 
         assertEquals("Campaign not found", exception.getMessage());
 
-        verify(campaignRepository, times(1)).findById(request.getId());
+        verify(campaignRepository, times(1)).findByIdAndDeletedFalse(request.getId());
         verify(campaignRepository, never()).save(any(Campaign.class));
     }
 
@@ -204,38 +201,51 @@ public class CampaignManagerTest {
     void deleteCampaign_shouldDeleteExistingCampaign() {
         Campaign campaign = new Campaign();
         campaign.setId(1L);
+        campaign.setDeleted(false);
 
+        when(campaignRepository.findByIdAndDeletedFalse(1L)).thenReturn(Optional.of(campaign));
         when(modelMapperService.forResponse()).thenReturn(modelMapper);
-        when(campaignRepository.findById(1L)).thenReturn(Optional.of(campaign));
-        when(modelMapperService.forResponse().map(any(Campaign.class), eq(GetAllCampaignsResponse.class))).thenReturn(new GetAllCampaignsResponse());
+        when(modelMapper.map(any(Campaign.class), eq(GetAllCampaignsResponse.class))).thenReturn(new GetAllCampaignsResponse());
 
         GetAllCampaignsResponse response = campaignManager.deleteCampaign(1L);
 
         assertNotNull(response);
-        verify(campaignRepository, times(1)).deleteById(1L);
+        assertTrue(campaign.isDeleted());
+        verify(campaignRepository, times(1)).save(campaign);
+        verify(modelMapperService, times(1)).forResponse();
+        verify(modelMapper, times(1)).map(any(Campaign.class), eq(GetAllCampaignsResponse.class));
     }
 
     @Test
     void deleteCampaign_shouldThrowCampaignNotFoundException() {
-        when(campaignRepository.findById(1L)).thenReturn(Optional.empty());
+        when(campaignRepository.findByIdAndDeletedFalse(1L)).thenReturn(Optional.empty());
 
-        assertThrows(CampaignNotFoundException.class, () -> campaignManager.deleteCampaign(1L));
+        CampaignNotFoundException exception = assertThrows(CampaignNotFoundException.class, () -> campaignManager.deleteCampaign(1L));
+
+        assertEquals("Campaign not found", exception.getMessage());
+        verify(campaignRepository, times(1)).findByIdAndDeletedFalse(1L);
     }
 
     @Test
     void deleteAllCampaigns_shouldDeleteAllCampaigns() {
         List<Campaign> campaigns = List.of(new Campaign(), new Campaign());
+        campaigns.forEach(campaign -> campaign.setDeleted(false));
+
         when(campaignRepository.findAll()).thenReturn(campaigns);
 
         campaignManager.deleteAllCampaigns();
 
-        verify(campaignRepository, times(1)).deleteAll();
+        campaigns.forEach(campaign -> assertTrue(campaign.isDeleted()));
+        verify(campaignRepository, times(1)).saveAll(campaigns);
     }
 
     @Test
     void deleteAllCampaigns_shouldThrowCampaignNotFoundException() {
         when(campaignRepository.findAll()).thenReturn(Collections.emptyList());
 
-        assertThrows(CampaignNotFoundException.class, () -> campaignManager.deleteAllCampaigns());
+        CampaignNotFoundException exception = assertThrows(CampaignNotFoundException.class, () -> campaignManager.deleteAllCampaigns());
+
+        assertEquals("Campaign not found", exception.getMessage());
+        verify(campaignRepository, times(1)).findAll();
     }
 }
